--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,13 +1,14 @@
 version: '3.4'
 
 services:
-  # catalog.api:
-  #   image: ${DOCKER_REGISTRY-}catalogapi
-  #   build:
-  #     context: .
-  #     dockerfile: Services/Catalog/Catalog.API/Dockerfile
   catalogdb:
     image: postgres
+
+  catalog.api:
+    image: ${DOCKER_REGISTRY-}catalogapi
+    build:
+      context: .
+      dockerfile: Services/Catalog/Catalog.API/Dockerfile
 
 volumes:
   postgres_catalog: 
